2004-03-15  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: fix widescreen detection for SMPTE vs IEC.
	* libdv/dv.h, dv.c: added dv_format_letterbox()
	* libdv/audio.c, dv.h: added dv_is_normal_speed()

2004-01-19  Dan Dennedy <dan@dennedy.org>
	* libdv/enc_input.c: workaround potential V4L compilation error.
	  (bug 879258)
	* libdv/Makefile.am: set the AGE back to 0 on the current interface
	  version due to breaking binary compatibility.

2004-01-16  Charles 'Buck' Krasic  <krasic@acm.org>

	* libdv 0.100 release

2004-01-13  Dan Dennedy <dan@dennedy.org>
	* encodedv/dvconnect.c: change a video1394 ioctl macro for better
	  kernel 2.6 compatibility.
	* libdv/enc_input.c: add luma clamping on pgm input luma for bug 874984.
	* configure.ac, playdv/Makefile.am: do not build playdv if no gtk, xv, or
	  sdl. Miscellaneous build fixes: no xv test if no gtk, permit cflags from
	  make command line.
	* encodedv/Makefile.am: build and install insert_audio.c as dubdv.
	* encodedv/dvdub.1, dvconnect.1: added man pages.
	* encodedv/dvconnect.c: make default video1394 device now /dev/video1394/0.
	* encodedv/dvavi.c, dvconnect.c: OS/X build fixes from Steven Schultz.
	* bump release version to 0.100 and increment libtool versions.
	* libdv/dv.c: apply patch from Mathias Herberts to try getting recording
	  date/time from vaux when ssyb fails.
	* libdv/dv.c, encode.c: ignore ntsc_setup options.

2004-01-04  Dan Dennedy <dan@dennedy.org>
	* encodedv/dvconnect.c, libdv/dv1394.h: fix for kernel 2.6 compatibility,
	  only backwards compatible to kernel 2.4.21.

2003-12-15  Dan Dennedy <dan@dennedy.org>
	* encode.c, dv.h: freeing the global mem in dv_encoder_free() is not safe
	  when working with multiple encoders and free-ing them at will.
	  Added dv_cleanup() to free memory allocated in dv_init().

2003-11-23  Stefan Lucke <stefan@lucke.in-berlin.de>
  * PAL fix for decode color rendering now in head
  * additional API functions:
      dv_get_num_samples (dv_decoder_t *dv)